[tra-14237]fix recette: fix z-index on sticky header

--- a/front/src/Apps/common/Components/layout/Header.module.scss
+++ b/front/src/Apps/common/Components/layout/Header.module.scss
@@ -10,7 +10,7 @@
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 12, 0.16);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 99;
 
   &.headerLogin {
     .headerContent {
